--- a/src/components/Dashboard/index.css
+++ b/src/components/Dashboard/index.css
@@ -1,44 +1,64 @@
 .main-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.secondary-div{
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+h1 {
+  color: rgb(41, 49, 85);
+}
+h3 {
+  color: rgb(41, 49, 85);
+}
+.secondary-div {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .photo-div {
-    width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
+  padding-bottom: 30px;
 }
 .photo-img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
-
+.filters-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 40px;
+}
+select {
+  height: 30px;
+  width: 250px;
+}
 .panel-photos {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-self: center;
-    width: 100%;
-    height: 100%
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-self: center;
+  width: 100%;
+  height: 100%;
 }
-.img-section-container{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.img-section-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .img-container {
- width: 33%;
- display: flex;
- flex-direction: column;
- align-items: center;
+  border: 1px solid rgba(41, 49, 85, 0.655);
+  border-radius: 20px;
+  margin: 30px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .img-container h4 {
-    text-align: center;
+  text-align: center;
 }
