--- a/src/components/Pages/index.css
+++ b/src/components/Pages/index.css
@@ -2,5 +2,17 @@
     display: flex;
 }
 .list {
+    width: 100%;
     list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+.button {
+    background-color: rgb(41, 49, 85) ;
+    color: white;
+    border: 1px solid white;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
 }
